ipython (0.9.1-3) unstable; urgency=low

  * Fixed broken Suggest on libjs-jquery (typo, was: libjs-query).

 -- Stephan Peijnik <debian@sp.or.at>  Thu, 19 Feb 2009 07:32:37 +0100

ipython (0.9.1-2) unstable; urgency=low

  * Upload to unstable.

 -- Stephan Peijnik <debian@sp.or.at>  Mon, 16 Feb 2009 07:55:45 +0100

ipython (0.9.1-1) experimental; urgency=low

  [ Stephan Peijnik ]
  * New upstream release (Closes: #500556).
  * Cleaned up debian/ because the upstream tarball is clean since 0.8.4-1:
    - Removed debian/uscan-dfsg-clean.sh.
    - Removed debian/README.Debian-source.
    - Updated debian/watch.
  * Removed debian/patches/05_fix_path_import.dpatch - fixed upstream.
  * Added myself to Uploaders.
  * Switched from dpatch to quilt patch system.
  * Added debian/patches/06_ipythonwx_importerror.patch.
    Provides more usable error message when trying to execute ipython-wx
    without python-wxgtk2.8 installed.
  * Updated build dependencies and recommends.
    - Added recommends: 
      + global (required by ipy_gnuglobal IPython extension)
      + python (>= 2.5) | python-ctypes
      + python-openssl
      + python-wxwidgets2.8 (needed by ipythonx and ipython-wx)
      + python-foolscap
      + python-twisted-core
      + python-zope-interface
    - Added build dependencies (Build-Depends-Indep): 
      + python-sphinx (needed for building the documentation)
      + python-pygments (needed for syntax highlighting in documentation)
      + python-foolscap
      + python-twisted-core
      + python-zope-interface
      + python-openssl
      + python (>= 2.5) | python-ctypes
      + python-nose
    - Added suggests:
      + libjs-query (needed by documentation to be searchable)
      + python-gobject
      + python-gtk2
      + python-qt3 | python-qt4
  * Added final newline to debian/manpages to get rid of a build-warning.
  * Updated debian/rules so parts of the html documentation are not compressed
    and thus rendered unusable.